{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 9,
  "lineage": "da34a217-501c-285c-6edf-d5fccf40d782",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00f4d068-b256-42df-be61-16ece41e27fd/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "location": "uksouth",
            "name": "aks-nsg",
            "resource_group_name": "networking-resource-group",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "kube_apiserver_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "6443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/00f4d068-b256-42df-be61-16ece41e27fd/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/kube-apiserver-rule",
            "name": "kube-apiserver-rule",
            "network_security_group_name": "aks-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "networking-resource-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/00f4d068-b256-42df-be61-16ece41e27fd/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/ssh-rule",
            "name": "ssh-rule",
            "network_security_group_name": "aks-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "networking-resource-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "control_plane_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/00f4d068-b256-42df-be61-16ece41e27fd/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks_vnet/subnets/control-plane-subnet",
            "name": "control-plane-subnet",
            "resource_group_name": "networking-resource-group",
            "virtual_network_name": "aks_vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.aks_rg",
            "module.networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "worker_node_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/00f4d068-b256-42df-be61-16ece41e27fd/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks_vnet/subnets/worker-node-subnet",
            "name": "worker-node-subnet",
            "resource_group_name": "networking-resource-group",
            "virtual_network_name": "aks_vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.aks_rg",
            "module.networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6cd55930-5275-483e-8da1-ec28fa1c84f1",
            "id": "/subscriptions/00f4d068-b256-42df-be61-16ece41e27fd/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks_vnet",
            "location": "uksouth",
            "name": "aks_vnet",
            "resource_group_name": "networking-resource-group"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    }
  ]
}